--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "0.0.0.4_book_of_comment",
+  "name": "new_project_mongodb",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "express": "^4.19.2",
     "graphql": "^16.9.0",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2"
-  }
+    "mongoose": "^8.5.1",
+    "nodemon": "^3.1.4"
+  },
+  "description": ""
 }
